--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,11 @@ repositories {
     maven { url = 'http://repo.extendedclip.com/content/repositories/placeholderapi/' }
 }
 
+configurations.all {
+    // Can't find where the Bukkit API was from lol
+    exclude module: "bukkit"
+}
+
 compileJava {
     options.compilerArgs += ["-parameters"]
     options.fork = true
@@ -38,7 +43,7 @@ dependencies {
     compileOnly 'com.destroystokyo.paper:paper-api:1.15.2-R0.1-SNAPSHOT'
     compileOnly 'org.spigotmc:spigot:1.15.2-R0.1-SNAPSHOT'
     // LuckPerms
-    compileOnly 'me.lucko.luckperms:luckperms-api:4.4'
+    compileOnly 'net.luckperms:api:5.0'
     // SmartInventory API
     compile(group: 'fr.minuskube.inv', name: 'smart-invs', version: '1.2.7') {
         transitive = false
@@ -63,7 +68,7 @@ processResources {
 
 shadowJar {
     relocate 'fr.minuskube.inv', 'com.jacky8399.worstshop.inv'
-    relocate('co.aikar.commands', 'com.jacky8399.worstshop.acf')
+    relocate 'co.aikar.commands', 'com.jacky8399.worstshop.acf'
     relocate 'co.aikar.locales', 'com.jacky8399.worstshop.acf.locales'
     //relocate 'co.aikar.minecraft-timings', 'com.jacky8399.worstshop.acf.minecraft-timings'
     relocate 'co.aikar.util', 'com.jacky8399.worstshop.acf.util'
