--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: WorstShop
-version: 0.2
+version: @version@
 main: com.jacky8399.worstshop.WorstShop
-api-version: 1.14
+api-version: 1.15
 depend:
   - Vault
 softdepend:
