--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,6 @@ compileJava {
 }
 
 dependencies {
-    //testCompile group: 'junit', name: 'junit', version: '4.12'
     // Paper API
     compileOnly 'com.destroystokyo.paper:paper-api:1.15.2-R0.1-SNAPSHOT'
     compileOnly 'org.spigotmc:spigot:1.15.2-R0.1-SNAPSHOT'
@@ -57,6 +56,8 @@ dependencies {
     compileOnly files("libs/PlayerPoints.jar")
     // Placeholders
     compileOnly 'me.clip:placeholderapi:2.10.3'
+    // Annotations
+    compile 'org.jetbrains:annotations:16.0.2'
 }
 
 import org.apache.tools.ant.filters.ReplaceTokens
