--- a/build.gradle
+++ b/build.gradle
@@ -40,8 +40,7 @@ compileJava {
 
 dependencies {
     // Paper API
-    compileOnly 'com.destroystokyo.paper:paper-api:1.16.1-R0.1-SNAPSHOT'
-    compileOnly 'org.spigotmc:spigot:1.16.1-R0.1-SNAPSHOT'
+    compileOnly 'com.destroystokyo.paper:paper:1.16.3-R0.1-SNAPSHOT'
     compileOnly 'net.md-5:bungeecord-chat:1.16-R0.1'
     // LuckPerms
     compileOnly 'net.luckperms:api:5.0'
