--- a/src/main/resources/en.yml
+++ b/src/main/resources/en.yml
@@ -13,6 +13,12 @@ worstshop:
         modify: '&aModify an existing shop'
 
       property:
+        shop:
+          title: '&eEditing shop {0}'
+          id: |
+            The unique ID of the shop.
+            &4WARNING: changing the ID also moves
+            &c&l&nthe file itself&4!
         gui:
           title: '&eEditing property {0}'
           current: '&aCurrent value!'
@@ -67,7 +73,7 @@ worstshop:
         description: 'Opens shop {0}'
 
       transaction-message: '&eYou traded &7&o({0} times)&r&e {1} for {2}.'
-      transaction-nothing: '&eYou didn''''t trade anything.'
+      transaction-nothing: '&eYou didn''t trade anything.'
       transaction-limit-reached: '&eYou can only purchase {0} every {1}. Please try again in {2}.'
       transaction-inv-full: '&cYour inventory cannot fit all the items!'
       transaction-refund: '&eYou were refunded &e{1} &7&o({0} trades)&r&e.'
