--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,7 @@ dependencies {
     api 'org.jetbrains:annotations:16.0.2'
 
     // Tests
-    testImplementation "org.mockito:mockito-core:3.6.0"
+    testImplementation "org.mockito:mockito-inline:3.6.0"
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.0"
 }
@@ -95,7 +95,7 @@ shadowJar {
 }
 
 test {
-    //useJUnitPlatform()
+    useJUnitPlatform()
 }
 
 build.dependsOn shadowJar
