--- a/build.gradle
+++ b/build.gradle
@@ -48,8 +48,8 @@ dependencies {
     // BungeeCord Chat
     compileOnly 'net.md-5:bungeecord-chat:1.16-R0.3'
     // Paper API
-    compileOnly 'com.destroystokyo.paper:paper-api:1.16.4-R0.1-SNAPSHOT'
-    compileOnly 'com.destroystokyo.paper:paper:1.16.4-R0.1-SNAPSHOT'
+    compileOnly 'com.destroystokyo.paper:paper-api:1.16.5-R0.1-SNAPSHOT'
+    compileOnly 'com.destroystokyo.paper:paper:1.16.5-R0.1-SNAPSHOT'
     // Mojang AuthLib
     compileOnly 'com.mojang:authlib:1.5.21'
     // LuckPerms
@@ -64,8 +64,10 @@ dependencies {
     }
     // Commands
     api 'co.aikar:acf-paper:0.5.0-SNAPSHOT'
-    // PlayerPoints
-    compileOnly files("libs/PlayerPoints.jar")
+    // PlayerPoints (use jitpack.io)
+    compileOnly('com.github.Mitsugaru:PlayerPoints:master-SNAPSHOT') {
+        transitive = false
+    }
     // Placeholders
     compileOnly 'me.clip:placeholderapi:2.10.3'
     // Annotations
