--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ repositories {
         name = 'minecraft-repo'
         url = 'https://libraries.minecraft.net/'
     }
+    maven { url = "https://repo.codemc.io/repository/maven-public/" }
 
     mavenLocal()
 }
@@ -51,7 +52,9 @@ dependencies {
     compileOnly 'com.destroystokyo.paper:paper-api:1.16.5-R0.1-SNAPSHOT'
     compileOnly 'com.destroystokyo.paper:paper:1.16.5-R0.1-SNAPSHOT'
     // Mojang AuthLib
-    compileOnly 'com.mojang:authlib:1.5.21'
+    compileOnly('com.mojang:authlib:1.5.21') {
+        transitive = false
+    }
     // LuckPerms
     compileOnly 'net.luckperms:api:5.0'
     // SmartInventory API
@@ -70,6 +73,10 @@ dependencies {
     }
     // Placeholders
     compileOnly 'me.clip:placeholderapi:2.10.3'
+    // QuickShop
+    compileOnly('org.maxgamer:QuickShop:4.0.7.3') {
+        transitive = false
+    }
     // Annotations
     compileOnly 'org.jetbrains:annotations:16.0.2'
 
