--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,8 @@ dependencies {
     compileOnly 'net.md-5:bungeecord-chat:1.16-R0.3'
     // Paper API
     compileOnly 'com.destroystokyo.paper:paper-api:1.16.5-R0.1-SNAPSHOT'
-    compileOnly 'com.destroystokyo.paper:paper:1.16.5-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot:1.17-R0.1-SNAPSHOT'
+    //compileOnly 'com.destroystokyo.paper:paper:1.16.5-R0.1-SNAPSHOT'
     // Mojang AuthLib
     compileOnly('com.mojang:authlib:1.5.21') {
         transitive = false
