use configurate library

--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ repositories {
 configurations {
     // wow! gradle magic!
     // makes test have the same sourceSet as main
-    testCompile.extendsFrom compileOnly
+    testImplementation.extendsFrom compileOnly
 }
 
 compileJava {
@@ -80,6 +80,8 @@ dependencies {
     implementation "io.papermc:paperlib:1.0.7"
     // Annotations
     compileOnly 'org.jetbrains:annotations:22.0.0'
+    // Configurate
+    implementation 'org.spongepowered:configurate-yaml:4.1.2'
 
     // Tests
     testImplementation "org.mockito:mockito-inline:3.6.0"
