--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,3 +2,6 @@
 advanced-protection: true
 # The default shop opened when running /worstshop
 default-shop: default
+# The RGB format to use
+# Default value &#([A-Za-z0-9]{6}) matches &#RRGGBB
+rgb-regex: "&#([A-Za-z0-9]{6})"
